Bug 372110 - On creating a new view in a new window, the tool options disappear in the first window
Summary: On creating a new view in a new window, the tool options disappear in the fir...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 3.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-11-05 14:54 UTC by Halla Rempt
Modified: 2016-11-19 15:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2016-11-05 14:54:13 UTC
Between 3.0 and 3.0.1, something changed here: 3.0 still shows the tool options docker in both windows. In 3.0.1, on opening a new view in the new window, the tool options docker is removed from the old window. Worse, it is no longer possible to interact with the canvas in the first view.
Comment 1 Dmitry Kazakov 2016-11-18 10:40:35 UTC
Git commit 9150e9f53fe9d5563b5dc360a0736970233ad88f by Dmitry Kazakov.
Committed on 18/11/2016 at 10:40.
Pushed by dkazakov into branch 'krita/3.1'.

Fix hiding Tool Options widgets when a new window is created

The problem is:

1) All the main windows are connected to
   KoToolManager::toolOptionWidgetsChanged() signal.
2) But different main windows do not share the tools.
3) Therefore the main windows should check if the signal
   was emitted by its own tool.
Fixes T4264

M  +2    -2    libs/flake/KoToolManager.cpp
M  +1    -1    libs/flake/KoToolManager.h
M  +13   -3    libs/ui/KisMainWindow.cpp
M  +2    -1    libs/ui/KisMainWindow.h

http://commits.kde.org/krita/9150e9f53fe9d5563b5dc360a0736970233ad88f
Comment 2 Dmitry Kazakov 2016-11-18 10:41:28 UTC
Git commit 89727e94b616d08666c94c6d52f5f0b3a3641404 by Dmitry Kazakov.
Committed on 18/11/2016 at 10:41.
Pushed by dkazakov into branch 'rempt/impex-refactoring'.

Fix hiding Tool Options widgets when a new window is created

The problem is:

1) All the main windows are connected to
   KoToolManager::toolOptionWidgetsChanged() signal.
2) But different main windows do not share the tools.
3) Therefore the main windows should check if the signal
   was emitted by its own tool.
Fixes T4264

M  +2    -2    libs/flake/KoToolManager.cpp
M  +1    -1    libs/flake/KoToolManager.h
M  +13   -3    libs/ui/KisMainWindow.cpp
M  +2    -1    libs/ui/KisMainWindow.h

http://commits.kde.org/krita/89727e94b616d08666c94c6d52f5f0b3a3641404
Comment 3 Scott Petrovic 2016-11-19 15:37:35 UTC
Git commit 7760309b39fadc791dcb5e5905a9464d7971c3f3 by Scott Petrovic, on behalf of Dmitry Kazakov.
Committed on 19/11/2016 at 15:23.
Pushed by scottpetrovic into branch 'petrovic/impex-brush-editor-ui'.

Fix hiding Tool Options widgets when a new window is created

The problem is:

1) All the main windows are connected to
   KoToolManager::toolOptionWidgetsChanged() signal.
2) But different main windows do not share the tools.
3) Therefore the main windows should check if the signal
   was emitted by its own tool.
Fixes T4264

M  +2    -2    libs/flake/KoToolManager.cpp
M  +1    -1    libs/flake/KoToolManager.h
M  +13   -3    libs/ui/KisMainWindow.cpp
M  +2    -1    libs/ui/KisMainWindow.h

http://commits.kde.org/krita/7760309b39fadc791dcb5e5905a9464d7971c3f3