Fix hiding Tool Options widgets when a new window is created

The problem is:

1) All the main windows are connected to
   KoToolManager::toolOptionWidgetsChanged() signal.
2) But different main windows do not share the tools.
3) Therefore the main windows should check if the signal
   was emitted by its own tool.

BUG:372110
Fixes T4264